src/test/deca/syntax/valid/improvided/test_include_2fichier.deca
// Description :
// 	inclusion de plus d'un fichier
// Resultats :
// 	ok
#include "included1.deca"
#include "included2.deca"
{
	print("inclusion");
}
