src/test/deca/syntax/invalid/improvided/include_not_found.deca
// Description :
// 	Inclure un fichier qui n'existe pas
// Resultats :
// 	Ligne 5 :
#include "not_found.deca"
{
	print("taaada");
} 
